...

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_folder_open" />
                    <TextView
                        android:id="@+id/location_button"
                        style="@style/NoteFragmentMetadataItemValueButton"
                        tools:text="Inbox"/>
                </LinearLayout>

                <!-- Title -->
                <com.orgzly.android.ui.views.richtext.RichText
                    android:id="@+id/title"
                    app:view_id="@+id/title_view"
                    app:edit_id="@+id/title_edit"
                    app:parse_checkboxes="false"
                    app:paddingHorizontal="@dimen/screen_edge"
                    app:paddingVertical="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_today" />
                        <TextView
                            android:id="@+id/scheduled_button"
                            style="@style/NoteFragmentMetadataItemValueButton"
                            android:hint="@string/schedule_button_hint"/>
                        <ImageButton
                            android:id="@+id/scheduled_remove"
                            style="@style/NoteFragmentMetadataItemButton"
                            android:src="@drawable/ic_close" />
...

                </LinearLayout>

                <!-- Content -->
                <com.orgzly.android.ui.views.richtext.RichText
                    android:id="@+id/content"
                    app:view_id="@+id/content_view"
                    app:edit_id="@+id/content_edit"
                    app:paddingHorizontal="@dimen/screen_edge"
                    app:paddingVertical="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="flagNoFullscreen"
...
